third_party/llvm-project/clang/test/Modules/Inputs/shadowed-submodule/A2/module.modulemap
module A [system] {
  module sub {
    header "sys/A.h"
  }
  module sub2 { // expected-error {{build a shadowed submodule 'A.sub2'}}
    header "sys/A2.h"
  }
  module stdarg {
    header "stdarg.h"
    export *
  }
}

module A2 {}
